# Solar-Flare

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
agents/: AGENTS.md  config.json  tools.json
agents/sub-agents/aspice_process_assessor/: AGENTS.md  tools.json
agents/sub-agents/embbed_architecture_designer/: AGENTS.md
agents/sub-agents/iso_26262_compliance_analyzer/: AGENTS.md
docs/: IMPLEMENTATION_STATUS.md  RAG_GUIDE.md
docs/discussions/: multi-store-rag-discussion.md
docs/plans/: langchain-logging-service-design-agent.md  multi-source-rag-ingestion-plan.md  multistore-rag.md  requirements_import.md
examples/: advanced_usage.py  basic_usage.py  multi_store_usage.py
src/solar_flare/: __init__.py  llm_providers.py  markdown_export.py  requirements_providers.py  session_state.py  tracing.py
src/solar_flare/agents/: __init__.py  aspice_assessor.py  base.py  design_reviewer.py  embedded_designer.py  iso_26262_analyzer.py  orchestrator.py
src/solar_flare/graph/: __init__.py  state.py  workflow.py
src/solar_flare/memory/: __init__.py  checkpointer.py  conversation.py  ingestor.py  multi_store.py  vector_store.py
src/solar_flare/memory/ingestion/: __init__.py  config.py  orchestrator.py  progress.py  versioning.py
src/solar_flare/memory/ingestion/connectors/: __init__.py  base.py  confluence_connector.py  local_fs.py  sharepoint_connector.py  smb_connector.py
src/solar_flare/memory/ingestion/loaders/: __init__.py  base.py  docx_loader.py  pdf_loader.py  pptx_loader.py  text_loader.py  xlsx_loader.py
src/solar_flare/prompts/: __init__.py  aspice.py  design_review.py  embedded.py  iso_26262.py  orchestrator.py
src/solar_flare/tools/: __init__.py  analysis_tools.py  github_tools.py  url_reader.py  web_search.py
src/solar_flare/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/evaluation/: __init__.py  evaluator.py  test_cases.json
tests/integration/: test_agents.py  test_workflow.py
tests/unit/: __init__.py  test_llm_providers.py  test_markdown_export.py  test_multi_store.py  test_requirements_providers.py  test_tools.py
tests/unit/test_ingestion/: __init__.py  test_connectors.py  test_loaders.py  test_orchestrator.py  test_versioning.py
